--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <div>
-    Hello from Asma!
+    <s>Hello world from Asma!</s> 
     Stay tune ! this situation will be over
+
 
     </div>
 </body>
