--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div>
-    <s>Hello world from Asma!</s> 
-    Stay tune ! this situation will be over
-
+    Hello world from Asma!
+    Stay tune ! <s>this situation will be over</s>
+     
 
     </div>
 </body>
